@@ -1,6 +1,7 @@
 10/8/11 started 7.26.3
 - don't use G_VALUE_COLLECT_INIT(), many platforms do not have a glib this
   recent
+- don't leave image->kill set when we detect termination
 
 10/8/11 started 7.26.2
 - oops, im_benchmark.c had some stuff turned off
